feat: expand monitoring and support services